--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruta & Fruto</title>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="./assets/css/normalize.css" rel="stylesheet" />
     <link href="./assets/css/reset.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/cabecera.css">
     <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
     <link rel="stylesheet" href="assets/css/menu/menu-item.css">
     <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/css/banner/banner.css">
+    <link rel="stylesheet" href="assets/css/banner/banner-imagen.css">
+    <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
 
 </head>
     <body>
@@ -34,5 +38,10 @@
             </ul>
         </nav>
       </header>
+      <section class="banner">
+        <img src="assets/img/banner.png" alt="" class="banner__imagen">
+          <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
+        </img>
+      </section>
     </body>
 </html>
