--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="assets/css/banner/banner.css">
     <link rel="stylesheet" href="assets/css/banner/banner-imagen.css">
     <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre-descripcion.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre-titulo.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre.css">
 
 </head>
     <body>
@@ -42,6 +45,10 @@
         <img src="assets/img/banner.png" alt="" class="banner__imagen">
           <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
         </img>
+      </section>
+      <section class="sobre">
+          <h2 class="sobre__titulo">Recetas para economizar y ganar salud</h2>
+          <p class="sobre__descripcion">Nuestras recetas te ayudan a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad</p>
       </section>
     </body>
 </html>
