--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <link rel="stylesheet" href="assets/css/quienes/quienes-descripcion.css">
     <link rel="stylesheet" href="assets/css/quienes/quienes-titulo.css">
     <link rel="stylesheet" href="assets/css/quienes/quienes.css">
+    <link rel="stylesheet" href="assets/css/persona/persona-funcion.css">
+    <link rel="stylesheet" href="assets/css/persona/persona-imagen.css">
+    <link rel="stylesheet" href="assets/css/persona/persona-nombre.css">
+    <link rel="stylesheet" href="assets/css/persona/persona.css">
+    <link rel="stylesheet" href="assets/css/personas.css">
+    <link rel="stylesheet" href="assets/css/rodapie/rodapie-descipcion.css">
+    <link rel="stylesheet" href="assets/css/rodapie/rodapie-icon.css">
+    <link rel="stylesheet" href="assets/css/rodapie/rodapie-item.css">
+    <link rel="stylesheet" href="assets/css/rodapie/rodapie-lista.css">
+    <link rel="stylesheet" href="assets/css/rodapie/rodapie-titulo.css">
+    <link rel="stylesheet" href="assets/css/rodapie.css">
 
 </head>
     <body>
@@ -52,7 +63,8 @@
         </nav>
       </header>
       <section class="banner">
-        <img src="assets/img/banner.png" alt="" class="banner__imagen">
+        <divc class="banner__imagen"></div>
+        <!--<img src="assets/img/banner.png" alt="" class="banner__imagen">-->
           <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
         </img>
       </section>
@@ -133,5 +145,15 @@
           </div>
       </div>
   </section>
+  <!-- Aula 5 -->
+  <footer class="rodapie">
+    <h3 class="rodapie__titulo">fruta & fruto 2022</h2>
+    <p class="rodapie__descripcion">Contacto</p>
+    <ul class="rodapie__lista">
+        <li class="rodapie__item"><a class="rodapie__icon" href="#"><img alt="WhatsApp" src="./assets/img/WhatsApp.png"></a></li>
+        <li class="rodapie__item"><a class="rodapie__icon" href="#" ><img alt="Email" src="./assets/img/email.png"></a></li>
+        <li class="rodapie__item"><a class="rodapie__icon" href="#"><img alt="Instagram" src="./assets/img/Instagram.png"></a></li>
+    </ul>
+</footer>
     </body>
 </html>
