--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="assets/css/rodapie/rodapie-lista.css">
     <link rel="stylesheet" href="assets/css/rodapie/rodapie-titulo.css">
     <link rel="stylesheet" href="assets/css/rodapie.css">
+    <link rel="stylesheet" href="assets/css/logo.css">
 
 </head>
     <body>
@@ -63,11 +64,9 @@
         </nav>
       </header>
       <section class="banner">
-        <divc class="banner__imagen"></div>
-        <!--<img src="assets/img/banner.png" alt="" class="banner__imagen">-->
-          <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
-        </img>
-      </section>
+        <div class="banner__imagen"></div>
+        <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
+    </section>
       <section class="sobre">
           <h2 class="sobre__titulo">Recetas para economizar y ganar salud</h2>
           <p class="sobre__descripcion">Nuestras recetas te ayudan a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad</p>
